<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment"
    android:background="@color/black">


    <LinearLayout
        android:layout_above="@+id/gameContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/player1Layout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/round_black_dark_blue_stoke">

            <TextView
                android:id="@+id/player1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Player one"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/player1_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/tic_tac_toe_cross_final"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player2Layout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:background="@drawable/round_back_dark_blue_20">
            <TextView
                android:id="@+id/player2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Player Two"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:id="@+id/player2_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/tic_tac_toe_circle_final"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/gameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="119dp"
        android:background="@drawable/round_back_purple_20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/round_back_dark_blue_20"
                android:contentDescription="Placeholder for icons, square 1"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@drawable/round_back_dark_blue_20"
                android:contentDescription="Placeholder for icons, square 2"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="Placeholder for icons, square 3"
                android:background="@drawable/round_back_dark_blue_20"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="Placeholder for icons, square 4"
                android:background="@drawable/round_back_dark_blue_20"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="Placeholder for icons, square 5"
                android:background="@drawable/round_back_dark_blue_20"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="Placeholder for icons, square 6"
                android:background="@drawable/round_back_dark_blue_20"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/image7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="Placeholder for icons, square 7"
                android:background="@drawable/round_back_dark_blue_20"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="Placeholder for icons, square 8"
                android:background="@drawable/round_back_dark_blue_20"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />

            <ImageView
                android:id="@+id/image9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="Placeholder for icons, square 9"
                android:background="@drawable/round_back_dark_blue_20"
                android:padding="20dp"
                android:src="@drawable/completely_transparent" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/quit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/quit" />


</RelativeLayout>