<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment"
    android:background="@color/black">

  <LinearLayout
      android:id="@+id/scoreContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_marginTop="20dp">

    <LinearLayout
        android:id="@+id/wonLayout"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_black_dark_blue_stoke">

      <TextView
          android:id="@+id/won_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0"
          android:textSize="32sp"
          android:textStyle="bold"
          android:textColor="@android:color/white"
          android:layout_gravity="center"
          android:layout_marginTop="10dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/won"
          android:textSize="12sp"
          android:textColor="@color/light_blue"
          android:layout_gravity="center"
          android:layout_marginBottom="10dp" />
    </LinearLayout>

    <!-- Player Lost -->
    <LinearLayout
        android:id="@+id/lostLayout"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:background="@drawable/round_back_dark_blue_20">

      <TextView
          android:id="@+id/lost_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0"
          android:textSize="32sp"
          android:textStyle="bold"
          android:textColor="@android:color/white"
          android:layout_gravity="center"
          android:layout_marginTop="10dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lost"
          android:textSize="12sp"
          android:textColor="@color/orange"
          android:layout_gravity="center"
          android:layout_marginBottom="10dp" />
    </LinearLayout>
  </LinearLayout>

  <TextView
      android:id="@+id/open_display"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/open_games"
      android:textSize="18sp"
      android:textColor="@android:color/white"
      android:textAlignment="center"
      android:layout_below="@id/scoreContainer"
      android:layout_marginTop="20dp" />

  <LinearLayout
      android:id="@+id/listContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_below="@id/open_display"
      android:layout_margin="10dp"
      android:background="@drawable/round_back_purple_20">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_item" />
  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_new_game"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:layout_margin="20dp"
      android:contentDescription="@string/new_game"
      android:src="@android:drawable/ic_input_add" />

</RelativeLayout>
